[Graal] assert(!m->can_be_statically_bound(InstanceKlass::cast(ctxk))) failed: redundant

XMLWordPrintable

    • b20

      Latest jdk13 changes introduced new jvm crash

      # Internal Error (/scratch/mesos/slaves/07fc96ef-bf4d-487f-b22f-a84e49f5f44a-S133584/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/db727d1b-1d72-42eb-87ba-c74e0b7b2825/runs/195e357c-4545-4011-a6ee-b55f009039f7/workspace/open/src/hotspot/share/code/dependencies.hpp:376), pid=5020, tid=28675
      # assert(!m->can_be_statically_bound(InstanceKlass::cast(ctxk))) failed: redundant
      #
      # JRE version: Java(TM) SE Runtime Environment (13.0) (fastdebug build 13-internal+0-2019-05-06-2054219.ekaterina.pavlova.jdk.jdk)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 13-internal+0-2019-05-06-2054219.ekaterina.pavlova.jdk.jdk, mixed mode, tiered, jvmci, jvmci compiler, compressed oops, g1 gc, bsd-amd64)
      # Core dump will be written. Default location: /cores/core.5020
      #
      # An error report file with more information is saved as:
      # /scratch/mesos/slaves/07fc96ef-bf4d-487f-b22f-a84e49f5f44a-S134482/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/f227e4c9-026c-4405-957f-52c4062817bf/runs/4b62aaef-71a0-4eea-95f1-6a641084d2f5/testoutput/test-support/jtreg_open_test_hotspot_jtreg_tier1_compiler_3/scratch/3/hs_err_pid5020.log
        36629 17861 % 1 org.graalvm.compiler.graph.Graph::maybeCompress @ 83 (249 bytes)
        36642 4435 3 java.util.ArrayDeque::addFirst (51 bytes) made not entrant
        36642 19096 4 java.io.DataInputStream::readUTF (501 bytes)
        36655 18863 % 1 org.graalvm.compiler.hotspot.HotSpotCompiledCodeBuilder::getSortedSites @ 353 (849 bytes)
        36679 18183 1 jdk.vm.ci.hotspot.HotSpotResolvedObjectTypeImpl::findFieldWithOffset (128 bytes)
        36694 16950 1 org.graalvm.compiler.nodes.graphbuilderconf.GraphBuilderConfiguration$Plugins::getOverridingStamp (56 bytes)
        36730 17086 % ! 1 org.graalvm.compiler.virtual.phases.ea.EffectsPhase::runAnalysis @ 279 (479 bytes)
        36747 18057 % 1 org.graalvm.compiler.nodes.GraphEncoder$NodeOrder::<init> @ 406 (513 bytes)


       in Graal as JIT mode.

            Assignee:
            Vladimir Ivanov
            Reporter:
            Ekaterina Pavlova
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: