src/hotspot/share/code/dependencies.hpp
@@ -373,7 +373,8 @@ class Dependencies: public ResourceObj {
     assert(ctxk->is_abstract(), "must be abstract");
   }
   static void check_unique_method(Klass* ctxk, Method* m) {
-    assert(!m->can_be_statically_bound(InstanceKlass::cast(ctxk)), "redundant");
+    // Graal can register redundant dependencies
+    assert(UseJVMCICompiler || !m->can_be_statically_bound(InstanceKlass::cast(ctxk)), "redundant");
   }
 
   void assert_common_1(DepType dept, DepValue x);
